force-app/main/default/objects/copado__Pull_Request__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <formula>Number_of_Approvals__c &gt;=  Number_of_Approvers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>