force-app/main/default/objects/copado__Pull_Request__c/fields/Number_of_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approvals__c</fullName>
    <label>Number of Approvals</label>
    <summaryFilterItems>
        <field>copado__Pull_Request_Review__c.copado__Review_Action__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>copado__Pull_Request_Review__c.copado__Pull_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>