force-app/main/default/objects/copado__Pull_Request__c/fields/Number_of_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approvers__c</fullName>
    <formula>LEN(copado__Requested_Reviewers__c) - LEN( SUBSTITUTE(copado__Requested_Reviewers__c, &apos;,&apos;, &apos;&apos;) )+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Approvers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>